PLANNER-2836 Finish conversion of examples to Jackson (#2364)